--- a/frontend/templates/product/product_category_list.html
+++ b/frontend/templates/product/product_category_list.html
@@ -563,7 +563,42 @@
                     </div>
                     <!--/APP-SIDEBAR-->
                 </div>
+                <div class="main-container container">
 
+                    <!-- PAGE-HEADER -->
+                    <div class="page-header">
+                        <h1 class="page-title">لیست دسته بندی کالاها</h1>
+                        <div>
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item"><a href="javascript:void(0)">مدیریت کالاها</a></li>
+                                <li aria-current="page" class="breadcrumb-item active">لیست دسته بندی کالاها</li>
+                            </ol>
+                        </div>
+                    </div>
+                    <!-- PAGE-HEADER END -->
+                    <div class="row row-cards">
+                        <div class="col-lg-12 col-xl-12">
+                            <div class="card">
+                                <div class="card-header border-bottom-0">
+                                </div>
+                                <div class="e-table px-5 pb-5">
+                                    <div class="table-responsive table-lg">
+                                        <table class="table border-top table-bordered mb-0">
+                                            <thead>
+                                            <tr>
+                                                <th>نام دسته بندی</th>
+                                                <th>توضیحات</th>
+                                            </tr>
+                                            </thead>
+                                            <tbody class="tbody">
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </div>
 
     <!-- FOOTER -->
